public class FallingPlatform extends Platform{
    private float collapse_rate;
    private float[] collapse_motion;

    FallingPlatform(){
        super();
        //todo constructor
    }

    public void collapse(){
        //todo method
    }
}
