public class Helmet {

    private Weapon[] weapon_options;

    Helmet(){
        //todo constructor
    }

    public Weapon[] get_weapon_options(){
        //todo method
        return null;
    }


}
