public class Platform implements Collidable{
    private int start_position;
    private int end_position;

    Platform(){
        //todo constructor
    }

    Platform(int start, int end){
        //todo constructor
    }

    @Override
    public void collide(Collidable other){
        //todo
    }
}
