public class RedOrc extends Orc{
    RedOrc(){
        //todo constructor
    }
}
