public class Weapon implements Collectable{

    private int level;



    public void get_collected(Hero hero){
        //todo
    }

    public int use(){
        //todo
        return 0;   //todo
    }

    public void upgrade(){
        //todo
    }

}

