@startuml
skinparam classAttributeIconSize 0

class Game {
    - player : Hero
    - environmentObjects : Objects<Environment>
    - orcs : Objects<Orc>
    - score : Scoreboard

    - <u>SERIALVERSIONID : long</u>
    + main() : void
    + serialise() : void
    + deserialise() : void
    + start() : void
    + stop() : void
    + pause() : void
    + resume() : void
    + save() : void
    + load() : void
    + exit() : void
    + resurrect() : void
}

class Hero extends Entity implements Collidable{
    - game: Game
    - equipped_helmet: Helmet
    - equipped_weapon: Weapon
    + equip_weapon(): void
    + switch_weapon(weapon: Weapon): void
    \n<i>@Override</i> \n+ collide(other: Collidable): void
}

abstract class Orc extends Entity implements Collidable{
    - HP: int
    - coin_count: int
    - sprite: ???
    <i>@Override</i> \n+ collide(other: Collidable): void
    die(hero: Hero): void
}

class Green_Orc extends Orc {
}
class Red_Orc extends Orc {
}
class Boss extends Orc {
}

interface Collidable{
    + void collide(other: Collidable): void
}

abstract class Entity {
    - float x_pos
    - float y_pos
    - float x_vel
    - float y_vel
    - float x_acc
    - float y_acc

    + set_velocity(x: float,y: float): void
    + set_acceleration(x: float,y: float): void
    + move(): void
}

abstract class Environment extends Entity implements Collidable{

}

class Coin extends Environment implements Collectable{
    <i>@Override</i> \n+ collide(other: Collidable): void
    <i>@Override</i> \n+ collect(collector: Hero): void
}

class Chest extends Environment {
    content: Collectable
    <i>@Override</i> \n+ collide(other: Collidable): void
    + open(): Collectable
}

class Platform extends Environment{
    <i>@Override</i> \n+ collide(other: Collidable): void
}

class FallingPlatform extends Platform {
    + collapse(): void
}

class Helmet{
}

class Weapon implements Collectable{
<i>@Override</i> \n+ collect(collector: Hero): void
}

interface Collectable{
    + collect(collector: Hero): void
}

Game "1 " *-- Hero
Hero "1    " *-- Helmet
Hero "1  " *-- Weapon
@enduml